@@ -11,7 +11,10 @@ python-debian (0.1.12) UNRELEASED; urgency=low
     relative regression test. Thanks to Cameron Dale and Tom Parker.
     (Closes: #462859).
 
- -- John Wright <jsw@debian.org>  Sat, 09 Aug 2008 17:15:34 -0600
+  [ John Wright ]
+  * deb822: allow the use of unicode objects in __getitem__
+
+ -- John Wright <jsw@debian.org>  Mon, 15 Sep 2008 17:40:44 -0600
 
 python-debian (0.1.11) unstable; urgency=low
 
